# jb_internship_2021_rider_and_ue_task

./: CMakeLists.txt  README.md
catch2_tests/: CMakeLists.txt  checkTrie.cpp  fileWithContent.txt  main.cpp
libs/taskflow/: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.hxx  Node.hxx  SafeForwardList.hxx  SafeQueue.hxx  ThreadPool.hxx  Trie.hxx  easylogging++.cc  easylogging++.h  main.cpp  styleSheet.qss
